Get rid off popup root dependency and improving the code according to @Sheikah comments